[project]
name = "cascadia-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "manissen", email = "manissen@ucsd.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.6",
]

[project.scripts]
cascadia = "cascadia_tracker.cli:app"

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"
